--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>This is a boring lecture</h1>
   <p class="intro">This is the description of our lecture</p>
-  <img class="intro" src="https://unsplash.it/600">
+  <img class="best" src="https://unsplash.it/600">
 
   <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat,</p>
 
