--- a/blog.html
+++ b/blog.html
@@ -2,25 +2,30 @@
 <html>
 <head>
 <title>Boring Lecture</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/blog.css">
 </head>
 
 <body>
-  <h1>This is a boring lecture</h1>
   <div class="intro">
+    <h1>This is an amazing blog post</h1>
     <p>This is the description of our lecture. It is super boring.</p>
-    <img class="best" src="https://unsplash.it/600">
+  </div>
+  <div class="beginning">
+    <img src="https://unsplash.it/1200/300">
+    <h2>This is why I code</h2>
     <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat,</p>
   </div>
 
+  <div class="middle">
+    <h2>Here's A Little About Me</h2>
+    <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut. <a href="aboutme.html">Learn more about me</a></p>
+  </div>
 
-  <h2>This is a boring headline for our boring lecture</h2>
+  <div class="end">
+    <h2>Check Out My Work</h2>
 
-  <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut.</p>
-
-  <h2>This is another boring headline for our boring lecture</h2>
-
-  <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut.</p>
+    <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut. <a href="resume.html">Here's my resume!</a></p>
+  </div>
 </body>
 
 </html>
