--- a/resume.html
+++ b/resume.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Boring Lecture</title>
+<title>My Resume</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1>This is a boring lecture</h1>
-  <div class="intro">
-    <p>This is the description of our lecture. It is super boring.</p>
-    <img class="best" src="https://unsplash.it/600">
-    <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat,</p>
+  <h1>My Resume</h1>
+  <div class="mission-statement">
+    <h2>Core Mission</h2>
+    <p>My goal is to create value for a company and develop the skills to take them to higher levels. I am a self motivated developer who uses technology to solve business facing problems.</p>
+  </div>
+  <div class="education">
+    <h2><em>Education</em></h2>
+    <ul>
+      <li>Graduated from Kentlake in 2008</li>
+      <li>Graduated from OIT in 2013</li>
+      <li>Enrolled in Epicodus in 2016</li>
+    </ul>
   </div>
 
+  <div class="work">
+    <h2> <span class="callout">Previous work</span></h2>
+    <ul>
+      <li>Worked for NASA</li>
+      <li>Chief Of Staff for President Obama</li>
+      <li>Stable hand for President Putin</li>
+    </ul>
+  </div>
 
-  <h2>This is a boring headline for our boring lecture</h2>
-
-  <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut.</p>
-
-  <h2>This is another boring headline for our boring lecture</h2>
-
-  <p>Lorem ipsum dolor sit amet, diam tristique sagittis non augue ut magna, fusce eget adipiscing a nam, consectetuer justo porttitor ac. Condimentum morbi eu etiam lorem, ut vel gravida, varius ad ratione sit odio in in, aenean aliquam at, amet leo imperdiet. Maecenas id nam velit, aliquam tellus pede scelerisque, amet tortor blandit, ut nec lobortis purus, est platea sociis porttitor amet massa. Condimentum lacus, massa sit in, quae erat, at nibh ut tempor faucibus. Et felis leo quis praesent praesent feugiat, nisl deserunt a, voluptatem dui minim, sed elementum lorem lobortis, vivamus aliquam. Aliquet proin vivamus interdum, sagittis faucibus ipsum integer. Posuere donec ligula enim quis habitant, sociosqu nullam eros lectus, tempus ut magna, aptent a arcu phasellus lorem aliquam. Pellentesque suspendisse gravida aliquam in id hymenaeos, facilisis congue, proin egestas ac, suspendisse curabitur. Velit id, quis montes turpis, vitae egestas et praesent interdum, sed magna libero pellentesque donec vestibulum felis, mauris in semper. Elit tristique, cras id quis quisque odio orci tellus, natoque dolor faucibus scelerisque, nulla elit vivamus odio commodo ut.</p>
 </body>
 
 </html>
